src/assets/scss/main.scss
@use "sass:math";
//<НАСТРОЙКИ/ПЕРЕМЕННЫЕ>===========================================================================================
@use "base/variables" as *;

//<НАСТРОЙКИ/ПЕРЕМЕННЫЕ>===========================================================================================

//<МИКСИНЫ>==================================================================================================
@import "base/mixins";
//</МИКСИНЫ>==================================================================================================

//<АНИМАЦИИ>==================================================================================================
@import "base/keyframes";
//<АНИМАЦИИ>==================================================================================================

//<ШРИФТЫ>====================================================================================================
//<Подключаем шрифты>=========================================================================================
//&display=swap&subset=cyrillic-ext
@import "fonts";
//</Подключаем шрифты>========================================================================================
//</Иконочные шрифты>=========================================================================================
// @import "iconfonts";
//</Иконочные шрифты>==========================================================================================
//</ШРИФТЫ>====================================================================================================

//<ОБНУЛЕНИЕ, ОБЩИЕ ПАРАМЕТРЫ>===============================================================================================
@import "base/nullstyle";

// @import "../../node_modules/swiper/swiper.min.css"; // Slider: npm install swiper, site: https://swiperjs.com/get-started
// @import "../../node_modules/air-datepicker/air-datepicker.css"; // Datepicker: npm i air-datepicker -S, site: https://air-datepicker.com/ru
body {
  // Скролл заблокирован
  &.lock {
    overflow: hidden;
    touch-action: none;
  }
  // Сайт загружен
  .loaded & {}
}
.workemail {
  display: none;
}
.wrapper {
  width: 100%;
  min-height: 100vh;
  overflow: clip;
  display: flex;
  flex-direction: column;
  // Прижимаем footer
  > main {
    flex: 1 1 auto;
  }
  // Фикс для слайдеров
  > * {
    min-width: 0;
  }
}

.header {
  flex-shrink: 0;
}

.footer {
  flex-shrink: 0;
}

.main {
  padding-bottom: 60px;
  @media screen and (max-width: $md) {
    padding-bottom: 30px;
  }
}

//<ОСНОВНАЯ СЕТКА>===========================================================================================================
// .container {
//   max-width: $maxWidthContainer + px;
//   margin: 0 auto;
//   padding: 0 math.div($containerPadding, 2) + px;
// }
//<ОСНОВНАЯ СЕТКА>===========================================================================================================

//<ПОДКЛЮЧЕНИЕ ФАЙЛОВ СТИЛЕЙ СТРАНИЦ И ЭЛЕМЕНТОВ>==============================================================================
// Подключение общих стилей для элементов
@import "./common";
@import "./libs/swiper";
@import "base/system-styles";
// @import "./libs/fancybox";

// Подключение общих стилей компонентов
@import "./components/content";
@import "./components/header";
@import "./components/footer";
@import "./components/main-top";
@import "./components/breadcrumbs";
@import "./components/popup";
@import "./components/form";

// Подключение стилей для отдельных страниц
@import "./pages/index";
@import "./pages/about";
@import "./pages/contacts";
@import "./pages/castle-list";
@import "./pages/castle-card";
@import "./pages/service-card";
@import "./pages/service-list";
@import "./pages/text-page";
//<ПОДКЛЮЧЕНИЕ ФАЙЛОВ СТИЛЕЙ СТРАНИЦ И ЭЛЕМЕНТОВ>==============================================================================
/* ПОДКЛЮЧЕНИЕ СТИЛЕЙ АДАПТИВА */
// @import "response";
/* НИЖЕ СТЕЛЕЙ НЕ ДОЛЖНО БЫТЬ!!! */

